Changelog
=========

3.2 (unreleased)
----------------

- Installing ATContentTypes in tests as they are not installed in plone5
  [pbauer]
- Changed some doctest to make it work on plone5
  [pbauer]
- Using new plone_registry to read config instead of old site_properties
  [pbauer]

3.1 (2014-02-26)
----------------

- Made collective_geo_styles indexer archetypes specific
  [giorgio]

- Changed IGeoCustomFeatureStyle adapter to be specific for Archetypes contents
  [gborelli]


3.0 (2013-10-29)
----------------

- Change package layout
  [gborelli]


3.0b1 (2013-06-02)
------------------

- moved GEO_STYLE_FIELDS to c.geo.settings
  [gborelli]
- Prevent subscribers the execution for dexterity content types
  [gborelli]
- Removed unused geoshapeform.pt template
  [gborelli]
- Added collective.z3cform.mapwidget dependency
  [gborelli]
- Added contentlocations_helper view to hide/show coordinate tabs
  [giorgio]
- Fixed browserlayer.xml
  [gborelli]
- Removed subscribers to mark/unmark georefereceable content types.
  Now all Archetypes contents provide IGeoReferenceable interface and
  can be georeferenced. A field in cgeo control panel allow in which
  content types display 'coordinates' tab
  [valentinaB]
- Changed method to display or hide Coordinates tab
  [valentinaB]
- Moved ShapeMapWidget and ShapeEditLayer classes to c.geo.mapwidget
  [gborelli]
- Removed geoshapemap shapeedit layer and widget and put them
  in c.geo.mapwidget
  [gborelli]
- Removed csv import feature. See https://github.com/collective/collective.geo.bundle/issues/6
  [valentinaB]


2.5 (2013-01-29)
----------------

- Added travis-ci configuration [gborelli]
- Moved reindexDocSubscriber from collective.geo.geographer [gborelli]
- Changed reindexDocSubscriber to reindexStylesSubscriber [gborelli]
- Removed import from zope.app [gborelli]
- Removed dependency on shapely, depend on pygeoif instead, fallback to shapely if installed [nan]